--- a/plugins/example/Makefile
+++ b/plugins/example/Makefile
@@ -1,12 +1,12 @@
 #
-# QEmacs sample Makefile to develop plugins
+# Qi sample Makefile to develop plugins
 #
-# QEmacs plugins can contain modes, bindings, or any other qemacs
+# Qi plugins can contain modes, bindings, or any other qemacs
 # dynamically registerable resource.
-#
 
 # modify to get the path of the qemacs sources
-QEMACS_PATH=../
+QEMACS_PATH=../../
+LOAD_PATH=../../build/plugins/
 # define the name of your plugin
 LIB=my_plugin.so
 # define the object files it contains
@@ -14,24 +14,23 @@ OBJS=my_plugin.o
 
 INCLUDES=-I$(QEMACS_PATH)
 DEFINES=-DQE_MODULE
-DIST_LIB:=$(HOME)/.qe/$(LIB)
+DIST_LIB:=$(HOME)/.qi/$(LIB)
 CC=gcc
 CFLAGS=-O2 -Wall -g -fPIC $(INCLUDES) $(DEFINES)
 
-# by default, the plugin is copied in ~/.qe/ some that qemacs can load
-# it automatically.
-all: $(DIST_LIB)
+# by default, the plugin is copied in ~/.qi/ so that Qi can load it automatically.
+all: $(LIB) #$(DIST_LIB)
 
 $(DIST_LIB): $(LIB)
 	install -s -m 644 $< $@
 
 install: $(DIST_LIB)
 
-$(LIB): $(OBJS) Makefile
-	$(CC) -shared -o $@ $(OBJS)
+$(LIB): $(OBJS) #Makefile
+	#$(CC) -shared -o $@ $(OBJS)
 
 %.o: %.c
-	$(CC) $(CFLAGS) -c -o $@ $<
+	$(CC) $(CFLAGS) -c -o $(LOAD_PATH)$@ $<
 
 clean:
 	rm -f *.o *.so *~
