trying to understand, and clean up, how plugins are loading

--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -1,5 +1,6 @@
 # by default, plugins are copied in ~/.qi/ so that Qi can load it automatically.
 all: 
+	@echo " == example == "
 	make -C example all
 
 install: 
