getting most of the code style plugins working again in the new organization.

--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -1,17 +1,13 @@
 LOAD_PATH=../build
 
-all: core
+all: core extra
 
 core:
-	@echo " == Building all core plugins == "
-	make -C shell all
-	make -C bufed all
+	@echo "======================================== Core plugins == "
 	make -C hex all
-	#make -C example all
-	#make -C clang all
-	make -C dired all
 	make -C list all
 	make -C tty all
+	make -C shell all
 	# make the group header file
 	find ./ -name "*.h" -exec cat {} >> ./plugincore.g \;
 	# rename it
@@ -19,22 +15,52 @@ core:
 	ar rcs libplugincore.a *.o
 	mv ./libplugincore.a $(LOAD_PATH)/$< 
 	rm *.o
-	@echo " == Done building all core plugins == "
+	@echo "======================================== End core plugins == "
+
+extra:
+	@echo "======================================== Extra plugins == "
+	#buffers
+	make -C bufed all
+	#direcotry browing
+	make -C dired all
+	#basic c language stuff (java, javascript, etc too)
+	make -C clang all
+	#hex mode for unicode files
+	make -C unihex all
+	#xml (and xml based languges)
+	make -C xml all
+	#latex, don't much care about this...
+	make -C latex-mode all
+	#just and example plugin
+	make -C example all
+	
+	ar rcs libplugins.a *.o
+	mv ./libplugins.a $(LOAD_PATH)/$< 
+	rm *.o
+	@echo "======================================== End extra plugins == "
+	
 
 #install: 
 #	make -C example install
 
 clean:
-	@echo " == Cleaning all core plugins == "
-	make -C shell clean
-	make -C bufed clean
+	@echo "======================================== Cleaning all core plugins == "
 	make -C hex clean
-	#make -C example clean
-	#make -C clang clean
-	make -C dired clean
 	make -C list clean
 	make -C tty clean
+	make -C shell clean
+	@echo "======================================== Cleaning all core plugins == "
+	@echo "======================================== Cleaning all extra plugins == "
+	make -C bufed clean
+	make -C dired clean
+	make -C clang clean
+	make -C unihex clean
+	make -C xml clean
+	make -C latex-mode clean
+	@echo "======================================== Cleaning all extra plugins == "
+	
 	rm -f $(LOAD_PATH)/libplugincore.a
+	rm -f $(LOAD_PATH)/libplugins.a
 	rm -f plugincore.h
 
 # NOTES:
