getting everything compling correctly (i hope)

--- a/src/plugins/charsetmore/Makefile
+++ b/src/plugins/charsetmore/Makefile
@@ -1,8 +1,18 @@
+include ../../config.mak
+
 # modify to get the path of the qemacs sources
 QEMACS_PATH=../../
 LOAD_PATH=../
 # define the object files it contains
 OBJS=charsetmore.o charset_table.o
+
+ifdef CONFIG_ARABIC
+OBJS+=arabic.o
+endif
+
+ifdef CONFIG_DEVANAGARI
+OBJS+=indic.o
+endif
 
 INCLUDES=-I$(QEMACS_PATH)
 DEFINES=-DQE_MODULE
@@ -16,4 +26,6 @@ all: $(OBJS)
 
 clean:
 	rm -f $(LOAD_PATH)charsetmore.o \
-		$(LOAD_PATH)charset_table.o
+		$(LOAD_PATH)charset_table.o \
+		$(LOAD_PATH)arabic.o \
+		$(LOAD_PATH)indic.o \
