adding php-mode

--- a/src/plugins/Makefile
+++ b/src/plugins/Makefile
@@ -39,6 +39,7 @@ extra:
 	make -C html all
 	#just and example plugin
 	make -C example all
+	make -C php-mode all
 	
 	#ar rcs libplugins.a *.o
 	ar -cvq libplugins.a *.o
@@ -66,7 +67,8 @@ clean:
 	make -C charsetmore clean
 	make -C latex-mode clean
 	make -C markdown-mode clean
-	make -C html all
+	make -C html clean
+	make -C php-mode clean
 	
 	rm -f $(LOAD_PATH)/libplugincore.a
 	rm -f $(LOAD_PATH)/libplugins.a
