adding css mode

--- a/src/plugins/Makefile
+++ b/src/plugins/Makefile
@@ -40,6 +40,7 @@ extra:
 	#just and example plugin
 	make -C example all
 	make -C php-mode all
+	make -C css-mode all
 	
 	#ar rcs libplugins.a *.o
 	ar -cvq libplugins.a *.o
@@ -69,6 +70,7 @@ clean:
 	make -C markdown-mode clean
 	make -C html clean
 	make -C php-mode clean
+	make -C css-mode clean
 	
 	rm -f $(LOAD_PATH)/libplugincore.a
 	rm -f $(LOAD_PATH)/libplugins.a
