Adding the start of python mode (pretty much just copied from C at the moment), and quick-open which isn't quite working yet either

--- a/src/plugins/Makefile
+++ b/src/plugins/Makefile
@@ -41,6 +41,8 @@ extra:
 	make -C example all
 	make -C php-mode all
 	make -C css-mode all
+	#make -C quick-open all
+	make -C python-mode all
 	
 	#ar rcs libplugins.a *.o
 	ar -cvq libplugins.a *.o
@@ -71,6 +73,8 @@ clean:
 	make -C html clean
 	make -C php-mode clean
 	make -C css-mode clean
+	#make -C quick-open clean
+	make -C python-mode clean
 	
 	rm -f $(LOAD_PATH)/libplugincore.a
 	rm -f $(LOAD_PATH)/libplugins.a
