--- a/src/plugins/quick-open/Makefile
+++ b/src/plugins/quick-open/Makefile
@@ -4,8 +4,7 @@ OBJS=quick-open.o
 
 INCLUDES=-I$(QEMACS_PATH)
 DEFINES=-DQE_MODULE
-CC=gcc
-CFLAGS=-O2 -Wall -g -fPIC $(INCLUDES) $(DEFINES)
+CFLAGS+= -g -fPIC $(INCLUDES) $(DEFINES)
 
 all: $(OBJS)
 
