--- a/src/plugins/tty/Makefile
+++ b/src/plugins/tty/Makefile
@@ -1,18 +1,30 @@
 # modify to get the path of the qemacs sources
 QEMACS_PATH=../../
 LOAD_PATH=../
+
 # define the object files it contains
 OBJS=tty.o
 
 INCLUDES=-I$(QEMACS_PATH)
 DEFINES=-DQE_MODULE
-CC=gcc
-CFLAGS=-O2 -Wall -g -fPIC $(INCLUDES) $(DEFINES)
+CFLAGS+= -g -fPIC $(INCLUDES) $(DEFINES)
 
-all: $(OBJS)
+TEST_SRC=$(wildcard *_test.c)
+
+all: $(OBJS) moveo
 
 %.o: %.c
-	$(CC) $(CFLAGS) -c -o $(LOAD_PATH)$@ $<
+	$(CC) $(CFLAGS) -c -o $@ $<
+
+moveo: 
+	mv *.o $(LOAD_PATH)
+	
 
 clean:
 	rm -f $(LOAD_PATH)tty.o
+
+#############################################################################
+
+test:
+	@echo 'tty has no tests'
+
