--- a/src/plugins/charsetmore/Makefile
+++ b/src/plugins/charsetmore/Makefile
@@ -16,8 +16,7 @@ endif
 
 INCLUDES=-I$(QEMACS_PATH)
 DEFINES=-DQE_MODULE
-CC=gcc
-CFLAGS=-O2 -Wall -g -fPIC $(INCLUDES) $(DEFINES)
+CFLAGS+= -g -fPIC $(INCLUDES) $(DEFINES)
 
 all: $(OBJS)
 
