--- a/src/plugins/clang/Makefile
+++ b/src/plugins/clang/Makefile
@@ -7,8 +7,7 @@ OBJS=clang.o
 
 INCLUDES=-I$(QEMACS_PATH)
 DEFINES=-DQE_MODULE
-CC=gcc
-CFLAGS=-O2 -Wall -g -fPIC $(INCLUDES) $(DEFINES)
+CFLAGS+= -g -fPIC $(INCLUDES) $(DEFINES)
 
 all: $(OBJS)
 
