Commenting out PHP and playing around with commenting in C

--- a/src/plugins/Makefile
+++ b/src/plugins/Makefile
@@ -46,7 +46,7 @@ extra:
 	make -C html all
 # just and example plugin
 	make -C example all
-	make -C php-mode all
+#	make -C php-mode all
 	make -C css-mode all
 # make -C quick-open all
 	make -C python-mode all
