--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -8,18 +8,22 @@ on:
 
 jobs:
   build:
+    name: Compile Ubuntu
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout repo
+      uses: actions/checkout@v2
+
     - name: configure
       run: ./configure --cc=gcc
+
     - name: test
       run: make test
+
     - name: build
       run: make clean qi
 
-    - uses: actions/checkout@v2
     - name: cppcheck
       uses: deep5050/cppcheck-action@main
       with:
