--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
     - name: Checkout repo
       uses: actions/checkout@v2
+    - name: Build
       run: ./configure --cc=gcc; make clean qi
 
   macos:
@@ -19,6 +20,7 @@ jobs:
     steps:
     - name: Checkout repo
       uses: actions/checkout@v2
+    - name: Buid
       run: ./configure --cc=clang; make clean qi
 
 #    - name: cppcheck
