--- a/src/plugins/Makefile
+++ b/src/plugins/Makefile
@@ -28,28 +28,26 @@ core:
 
 extra:
 	@echo "======================================== Extra plugins == "
-	#buffers
+# buffers
 	make -C bufed all
-# direcotry browing
+# direcotry browsing
 	make -C dired all
-# basic c language stuff (java, javascript, etc too)
+# basic c language stuff (java, javascript, go, terraform, etc too)
 	make -C clang all
 # hex mode for unicode files
 	make -C unihex all
 # xml (and xml based languges)
 	make -C xml all
-	make -C charsetmore all
+	make -C html all
+	make -C css-mode all
 # latex mode
 	make -C latex-mode all
 # markdown mode
 	make -C markdown-mode all
-	make -C html all
 # just and example plugin
 	make -C example all
-#	make -C php-mode all
-	make -C css-mode all
-# make -C quick-open all
 	make -C python-mode all
+# Makefile, yaml, ini, etc
 	make -C config-mode all
 	
 # ar rcs libplugins.a *.o
@@ -63,22 +61,20 @@ clean:
 	make -C hex clean
 	make -C list clean
 	make -C tty clean
-	make -C shell clean
+#	make -C shell clean
 	@echo "======================================== Cleaning all extra plugins == "
 	make -C bufed clean
 	make -C dired clean
 	make -C clang clean
 	make -C unihex clean
 	make -C xml clean
-	make -C charsetmore clean
 	make -C latex-mode clean
 	make -C markdown-mode clean
 	make -C html clean
-	make -C php-mode clean
 	make -C css-mode clean
-# make -C quick-open clean
 	make -C python-mode clean
 	
 	rm -f $(LOAD_PATH)/libplugincore.a
 	rm -f $(LOAD_PATH)/libplugins.a
 	rm -f plugincore.h
+
