Adding tiny build to the build

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -16,6 +16,8 @@ jobs:
       run: ./configure --cc=gcc; make test; ./build/run_tests
     - name: Build
       run: ./configure --cc=gcc; make clean qi
+    - name: Tiny Build
+      run: ./configure --cc=gcc --enable-tiny; make clean qi
 
   macos:
     runs-on: macos-latest
@@ -23,8 +25,8 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@v2
     - name: Test
-      run: ./configure --cc=gcc; make test; ./build/run_tests
-    - name: Buid
+      run: ./configure --cc=clang; make test; ./build/run_tests
+    - name: Build
       run: ./configure --cc=clang; make clean qi
 
 #    - name: cppcheck
