Code removal, adding tests, playing with new unicode method  (#21)
* Adding some basic logging
* Clean up TTY a bit
* Adding unicode functions and tests (and a few comments)
* Updating doco with some new bindings and useful functions
* Removing some preprocessors and playing with new unicode
* Removing a lot of old code and playing with unicode
* Moving ASSERT and removing non-used charsets
* Removing commented out code and removing hard coded escape sequences
* Removing old code and locking everything to utf8
* Removing unused bindings, and adding C-l (center line)
* Playing with fixing utf8 and writing some tests :-o
* Trying to make auto-indent for C languages work more like I want
* Adding Makefile and Dockerfile to config-mode
* Adding tests for strfind and making Dockerfile, etc auto mode
* Changing refresh to C-t since C-l is now center line
* Add the test step to github action
* Adding tiny build to the build

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,5 @@
+.PHONY: test
+
 include config.mak
 
 # from configure / config.mak
@@ -37,11 +39,6 @@ endif
 
 DEFINES=-DHAVE_QE_CONFIG_H
 
-ifdef CONFIG_DLL
-LIBS+=-ldl
-LDFLAGS+=-Wl
-endif
-
 LIBS+=-lm
 
 LOAD_PATH=../build
@@ -54,11 +51,12 @@ TARGETLIBS:=
 TARGETS+=qi$(EXE)
 
 # qfribidi.o == CONFIG_UNICODE_JOIN
-_OBJS=qe.o charset.o buffer.o input.o unicode_join.o display.o util.o cutils.o qstack.o qfribidi.o unix.o
+_OBJS=qe.o charset.o buffer.o input.o unicode.o unicode_join.o display.o \
+util.o cutils.o qstack.o qfribidi.o unix.o
 
 OBJS = $(patsubst %,$(LOAD_PATH)/%,$(_OBJS))
 
-TEST_SRC=$(wildcard *_test.c)
+TEST_SRC=$(wildcard ./tests/*.c)
 
 # Inlucde all the plugin libraries (extras if not doing a tiny build)
 PLUGS=-lplugincore
@@ -108,7 +106,8 @@ clean:
 distclean: clean
 	rm -f config.h config.mak
 
-#############################################################################
-
-test: $(TEST_SRC)
+test:
+	@echo '======================================== Building qi tests ==== '
+	mkdir -p ../build
+	$(CC) $(CFLAGS) $(TESTS_SRC) tests.c $(LIBS) -o ../build/run_tests
 	make -C plugins test
