--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -12,15 +12,21 @@ jobs:
     steps:
     - name: Checkout repo
       uses: actions/checkout@v2
+    - name: Test
+      run: ./configure --cc=gcc; make test; ./build/run_tests
     - name: Build
       run: ./configure --cc=gcc; make clean qi
+    - name: Tiny Build
+      run: ./configure --cc=gcc --enable-tiny; make clean qi
 
   macos:
     runs-on: macos-latest
     steps:
     - name: Checkout repo
       uses: actions/checkout@v2
-    - name: Buid
+    - name: Test
+      run: ./configure --cc=clang; make test; ./build/run_tests
+    - name: Build
       run: ./configure --cc=clang; make clean qi
 
 #    - name: cppcheck
