Using system runner (#24)
* Moving system runner into core 
* making `C-.` run aspell
* Updating color docs
* Adding eb_get_substr to get part of a buffer
* Making golang it's own mode 
* `C-x y` runs gofmt
* Getting text_style passing all the way to display
So you can add things like underline and blink and what not. Currently this
doesn't quite work right as the rendering can sometimes paint past where
it should (use underline for a test case)
* Cleaning up python mode and using the better indent
* Adding more python file types
* adding `C-x y` to run Black as a formatter for python
* Saving the buffer automatically before running the formatter on it
* adding `C-x y` to run clang-format for C files
* Adding refresh for when you exit something on the raw terminal (like aspell). Sometimes the screen is in a bad state
* Trying to turn off logging - seeing if that fixes the PI
* Commenting out logs and removing beta flag
* Adding "reset device" escape code
* Removing unused functions
* Removing unused variable
* Adding headers for wait()

--- a/src/plugins/golang/Makefile
+++ b/src/plugins/golang/Makefile
@@ -1,8 +1,9 @@
 # modify to get the path of the qemacs sources
 QEMACS_PATH=../../
+#LOAD_PATH=../../build/plugins/
 LOAD_PATH=../
 # define the object files it contains
-OBJS=runner.o
+OBJS=golang.o
 
 INCLUDES=-I$(QEMACS_PATH)
 DEFINES=-DQE_MODULE
@@ -14,7 +15,4 @@ all: $(OBJS)
 	$(CC) $(CFLAGS) -c -o $(LOAD_PATH)$@ $<
 
 clean:
-	rm -f $(LOAD_PATH)runner.o
-
-test:
-	@echo 'runner has no tests'
+	rm -f $(LOAD_PATH)golang.o
