--- a/src/plugins/Makefile
+++ b/src/plugins/Makefile
@@ -7,16 +7,12 @@ test:
 	make -C hex test
 	make -C list test
 	make -C tty test
-	make -C runner test
-#	make -C shell test
 	
 core:
 	@echo "======================================== Core plugins == "
 	make -C hex all
 	make -C list all
 	make -C tty all
-	make -C runner all
-#	make -C shell all
 # make the group header file
 	find ./ -name "*.h" -exec cat {} >> ./plugincore.g \;
 # rename it
@@ -51,6 +47,8 @@ extra:
 	make -C python-mode all
 # Makefile, yaml, ini, etc
 	make -C config-mode all
+# 
+	make -C golang all	
 	
 # ar rcs libplugins.a *.o
 	ar -cvq libplugins.a *.o
@@ -63,8 +61,6 @@ clean:
 	make -C hex clean
 	make -C list clean
 	make -C tty clean
-#	make -C shell clean
-	make -C runner clean
 	@echo "======================================== Cleaning all extra plugins == "
 	make -C bufed clean
 	make -C dired clean
@@ -76,6 +72,7 @@ clean:
 	make -C html clean
 	make -C css-mode clean
 	make -C python-mode clean
+	make -C golang clean
 	
 	rm -f $(LOAD_PATH)/libplugincore.a
 	rm -f $(LOAD_PATH)/libplugins.a
