--- a/src/Makefile
+++ b/src/Makefile
@@ -51,8 +51,8 @@ LOAD_PATH=../build
 TARGETLIBS:=
 TARGETS+=qi$(EXE)
 
-# qfribidi.o == CONFIG_UNICODE_JOIN
-_OBJS=qe.o charset.o buffer.o input.o unicode.o unicode_join.o display.o \
+# qfribidi.o == CONFIG_UNICODE_JOIN  charset.o
+_OBJS=qe.o buffer.o input.o unicode.o unicode_join.o display.o \
 util.o cutils.o qstack.o qfribidi.o unix.o
 
 OBJS = $(patsubst %,$(LOAD_PATH)/%,$(_OBJS))
