--- a/src/plugins/Makefile
+++ b/src/plugins/Makefile
@@ -1,19 +1,21 @@
 LOAD_PATH=../../build
 
+MAKE?=$(MAKE)
+
 all: core extra
 
 test:
 	@echo "======================================== Core tests == "
-	make -C hex test
-	make -C list test
-	make -C tty test
+	$(MAKE) -C hex test
+	$(MAKE) -C list test
+	$(MAKE) -C tty test
 	
 core:
 	@echo "======================================== Core plugins == "
-	make -C hex all
-	make -C list all
-	make -C tty all
-# make the group header file
+	$(MAKE) -C hex all
+	$(MAKE) -C list all
+	$(MAKE) -C tty all
+# $(MAKE) the group header file
 	find ./ -name "*.h" -exec cat {} >> ./plugincore.g \;
 # rename it
 	mv plugincore.g plugincore.h
@@ -27,30 +29,30 @@ core:
 extra:
 	@echo "======================================== Extra plugins == "
 # buffer browser
-	make -C bufed all
+	$(MAKE) -C bufed all
 # direcotry browsing
-	make -C dired all
+	$(MAKE) -C dired all
 # basic c language stuff (java, javascript, go, terraform, etc too)
-	make -C clang all
+	$(MAKE) -C clang all
 # hex mode for unicode files
-	make -C unihex all
+	$(MAKE) -C unihex all
 # xml (and xml based languges)
-	make -C xml all
-	make -C html all
-	make -C css-mode all
+	$(MAKE) -C xml all
+	$(MAKE) -C html all
+	$(MAKE) -C css-mode all
 # latex mode
-	make -C latex-mode all
+	$(MAKE) -C latex-mode all
 # markdown mode
-	make -C markdown-mode all
+	$(MAKE) -C markdown-mode all
 # just and example plugin
-	make -C example all
-	make -C python-mode all
+	$(MAKE) -C example all
+	$(MAKE) -C python-mode all
 # Makefile, yaml, ini, etc
-	make -C config-mode all
+	$(MAKE) -C config-mode all
 # 
-	make -C golang all
-	make -C tslang all
-	make -C maths-mode all
+	$(MAKE) -C golang all
+	$(MAKE) -C tslang all
+	$(MAKE) -C maths-mode all
 	
 # ar rcs libplugins.a *.o
 	ar -cvq libplugins.a *.o
@@ -60,23 +62,23 @@ extra:
 
 clean:
 	@echo "======================================== Cleaning all core plugins == "
-	make -C hex clean
-	make -C list clean
-	make -C tty clean
+	$(MAKE) -C hex clean
+	$(MAKE) -C list clean
+	$(MAKE) -C tty clean
 	@echo "======================================== Cleaning all extra plugins == "
-	make -C bufed clean
-	make -C dired clean
-	make -C clang clean
-	make -C unihex clean
-	make -C xml clean
-	make -C latex-mode clean
-	make -C markdown-mode clean
-	make -C html clean
-	make -C css-mode clean
-	make -C python-mode clean
-	make -C golang clean
-	make -C tslang clean
-	make -C maths-mode clean
+	$(MAKE) -C bufed clean
+	$(MAKE) -C dired clean
+	$(MAKE) -C clang clean
+	$(MAKE) -C unihex clean
+	$(MAKE) -C xml clean
+	$(MAKE) -C latex-mode clean
+	$(MAKE) -C markdown-mode clean
+	$(MAKE) -C html clean
+	$(MAKE) -C css-mode clean
+	$(MAKE) -C python-mode clean
+	$(MAKE) -C golang clean
+	$(MAKE) -C tslang clean
+	$(MAKE) -C maths-mode clean
 	
 	rm -f $(LOAD_PATH)/libplugincore.a
 	rm -f $(LOAD_PATH)/libplugins.a
